# rust_practice

./: README.md
Chapter_1/hello_cargo/: Cargo.toml
Chapter_2/guessing_game_in_rust/: Cargo.toml
Chapter_2/gussing_game_in_rust/game_part_1/: Cargo.toml  README.md
Chapter_2/gussing_game_in_rust/game_part_1/src/: main.rs
Chapter_2/gussing_game_in_rust/game_part_2/: Cargo.toml  README.md
Chapter_2/gussing_game_in_rust/game_part_2/src/: main.rs
Chapter_3/control_flow/src/: main.rs
Chapter_3/function_in_rust/: Cargo.toml
Chapter_3/function_in_rust/src/: main.rs
Chapter_3/rust_data_type/: Cargo.toml
Chapter_3/rust_data_type/src/: main.rs
Chapter_3/variables_and_mutability/src/: main.rs
Chapter_4/references_and_borrowing/src/: main.rs
Chapter_4/what_is_ownership/src/: main.rs
The_book/Chapter_1/hello_cargo/src/: main.rs
The_book/Chapter_1/hello_world/: main.rs
