[package]
name = "game_part_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.8.3"#this means import version that is at leaset 0.8.3 but below 9.0.0

#By doing this, rand crate(library) will be imported.